# pinvest

./: .gitignore  .pinvest.example  LICENSE  README.md  _test_strategy.py  ib.py  main.py  pyproject.toml  test_alignment.py  test_config.py  test_contracts.py  test_gather_prices.py  test_holdings.py  test_lump_sum.py  test_portfolio.py  test_pricing.py  test_rebalance.py  test_strategy.py
