[project]
name = "pinvest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ib-insync>=0.9.86",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pyright>=1.1.410",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
